--- a/dts/bindings/pinctrl/nxp,kinetis-pinmux.yaml
+++ b/dts/bindings/pinctrl/nxp,kinetis-pinmux.yaml
@@ -11,13 +11,18 @@ properties:
     clocks:
       required: true
 
-child-binding:
-    description: bar
-    properties:
-      pin:
-        required: true
-        type: int
+    "#nxp,kinetis-pin-cells":
+      type: int
+      required: true
+      const: 2
+      description: Number of items to expect in a nxp,kinetis-pins specifier
 
-      mux:
-        required: true
-        type: int
+nxp,kinetis-pin-cells:
+  - pin
+  - mux
+
+child-binding:
+    description: nxp kinetis pins
+    properties:
+      "nxp,kinetis-pins":
+        type: phandle-array
