dts: add usart10 device node in dts/arm/st/h7/stm32h723.dtsi
USART10 is available in STM32H723 and related variants.
Fixes #33475

Signed-off-by: Kshitij Kumar <kshitij9192@gmail.com>

--- a/dts/arm/st/h7/stm32h723.dtsi
+++ b/dts/arm/st/h7/stm32h723.dtsi
@@ -22,6 +22,15 @@
 			status = "disabled";
 			label = "UART_9";
 		};
+
+		usart10: serial@40011C00 {
+			compatible = "st,stm32-usart", "st,stm32-uart";
+			reg = <0x40011C00 0x400>;
+			clocks = <&rcc STM32_CLOCK_BUS_APB2 0x00000080>;
+			interrupts = <156 0>;
+			status = "disabled";
+			label = "UART_10";
+		};
 	};
 	/* DTCM memory directly coppled to CPU */
 	dtcm: memory@20000000 {
