--- a/.github/workflows/doc-publish.yml
+++ b/.github/workflows/doc-publish.yml
@@ -79,7 +79,7 @@ jobs:
         DOC_TAG: ${{ steps.tag.outputs.TYPE }}
       run: |
         source zephyr-env.sh
-        make DOC_TAG=${DOC_TAG} htmldocs
+        make SPHINX_USE_ALGOLIA=1 DOC_TAG=${DOC_TAG} htmldocs
 
     - name: check-warns
       run: |
