drivers/spi: Add support for GRLIB SPICTRL
This adds support for the GRLIB SPICTRL SPI controller used in LEON and
NOEL-V systems.

Signed-off-by: Martin Åberg <martin.aberg@gaisler.com>

--- a/drivers/spi/CMakeLists.txt
+++ b/drivers/spi/CMakeLists.txt
@@ -25,6 +25,7 @@ zephyr_library_sources_ifdef(CONFIG_SPI_EMUL spi_emul.c)
 zephyr_library_sources_ifdef(CONFIG_SPI_GD32 spi_gd32.c)
 zephyr_library_sources_ifdef(CONFIG_SPI_GECKO_EUSART spi_gecko_eusart.c)
 zephyr_library_sources_ifdef(CONFIG_SPI_GECKO_USART spi_gecko_usart.c)
+zephyr_library_sources_ifdef(CONFIG_SPI_GRLIB_SPICTRL spi_grlib_spictrl.c)
 zephyr_library_sources_ifdef(CONFIG_SPI_GRLIB_SPIMCTRL spi_grlib_spimctrl.c)
 zephyr_library_sources_ifdef(CONFIG_SPI_INFINEON_CAT1 spi_ifx_cat1.c)
 zephyr_library_sources_ifdef(CONFIG_SPI_ITE_IT8XXX2 spi_it8xxx2.c)
