--- a/drivers/spi/Kconfig
+++ b/drivers/spi/Kconfig
@@ -86,6 +86,7 @@ source "drivers/spi/Kconfig.esp32"
 source "drivers/spi/Kconfig.gd32"
 source "drivers/spi/Kconfig.gecko_eusart"
 source "drivers/spi/Kconfig.gecko_usart"
+source "drivers/spi/Kconfig.grlib_spictrl"
 source "drivers/spi/Kconfig.grlib_spimctrl"
 source "drivers/spi/Kconfig.ifx_cat1"
 source "drivers/spi/Kconfig.it8xxx2"
