west: Introduce hal bouffalo lab
Add initial version that uses bouffalo_sdk 1.4.2.

Signed-off-by: Gerson Fernando Budke <nandojve@gmail.com>

--- a/west.yml
+++ b/west.yml
@@ -23,6 +23,8 @@ manifest:
       url-base: https://github.com/zephyrproject-rtos
     - name: babblesim
       url-base: https://github.com/BabbleSim
+    - name: nandojve
+      url-base: https://github.com/nandojve
 
   group-filter: [-babblesim, -optional]
 
@@ -159,6 +161,12 @@ manifest:
     - name: hal_atmel
       revision: 56d60ebc909ad065bf6554cee73487969857614b
       path: modules/hal/atmel
+      groups:
+        - hal
+    - name: hal_bouffalolab
+      remote: nandojve
+      path: modules/hal/bouffalolab
+      revision: sdk-v1.4.5
       groups:
         - hal
     - name: hal_espressif
