--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -245,6 +245,7 @@
 /drivers/counter/*esp32*                  @glaubermaroto
 /drivers/crypto/*nrf_ecb*                 @maciekfabia @anangl
 /drivers/display/display_framebuf.c       @dcpleung
+/drivers/display/*ek79652*                @DineshDK03
 /drivers/display/*rm68200*                @mmahadevan108
 /drivers/dac/                             @martinjaeger
 /drivers/dai/                             @juimonen @marcinszkudlinski @abonislawski
