display: st7789h2: added gpio bitbang driver
Added st7789h2 gpio bitbanging driver.

Signed-off-by: Jeremy LOCHE <lochejeremy@gmail.com>

--- a/drivers/display/Kconfig
+++ b/drivers/display/Kconfig
@@ -34,6 +34,7 @@ source "drivers/display/Kconfig.gd7965"
 source "drivers/display/Kconfig.dummy"
 source "drivers/display/Kconfig.ls0xx"
 source "drivers/display/Kconfig.rm68200"
+source "drivers/display/Kconfig.st7789h2_gpio"
 
 config FRAMEBUF_DISPLAY
 	# Hidden, selected by client drivers.
