[DNM] west.yml: Add wasm-micro-runtime into projects
Add wasm-micro-runtime into west.yml projects.

Signed-off-by: TOKITA Hiroshi <tokita.hiroshi@gmail.com>
Signed-off-by: Wenyong Huang <wenyong.huang@intel.com>

--- a/west.yml
+++ b/west.yml
@@ -23,6 +23,8 @@ manifest:
       url-base: https://github.com/zephyrproject-rtos
     - name: babblesim
       url-base: https://github.com/BabbleSim
+    - name: soburi
+      url-base: https://github.com/soburi
 
   group-filter: [-babblesim, -optional]
 
@@ -376,6 +378,10 @@ manifest:
     - name: uoscore-uedhoc
       revision: 54abc109c9c0adfd53c70077744c14e454f04f4a
       path: modules/lib/uoscore-uedhoc
+    - name: wasm-micro-runtime
+      remote: soburi
+      revision: integrate_wamr
+      path: modules/lib/wasm-micro-runtime
     - name: zcbor
       revision: 9b07780aca6fb21f82a241ba386ad9b379809337
       path: modules/lib/zcbor
