[nrf noup] modules: mbedtls: add PSA configurations
Add all of the PSA specification defined algorithms and key types.
This makes the configurations independent of what is supported by the
specific implementation.
Add configurations for internal logic to see if a feature is enabled by
PSA_WANTS_XXX.

ref: NCSDK-11689
ref: NCSDK-17840
ref: NCSDK-17840
ref: NCSDK-26057

Add PSA symbols for Oberon extension to the PSA specification.
Mbed TLS has adopted the same naming, so while this is not part of the
PSA specification it is fine to add it to the generic configuration
for both implementations.

Add config support for PBKDF2_HMAC.
Add config support for PBKDF2_AES_CMAC_PRF_128

Signed-off-by: Frank Audun Kvamtrø <frank.kvamtro@nordicsemi.no>
Signed-off-by: Vidar Lillebø <vidar.lillebo@nordicsemi.no>
Signed-off-by: Sebastian Bøe <sebastian.boe@nordicsemi.no>
Signed-off-by: Markus Swarowsky <markus.swarowsky@nordicsemi.no>
Signed-off-by: Joakim Andersson <joakim.andersson@nordicsemi.no>
Signed-off-by: Maciej Baczmanski <maciej.baczmanski@nordicsemi.no>
Signed-off-by: Georgios Vasilakis <georgios.vasilakis@nordicsemi.no>
(cherry picked from commit 0a78b665e502695a7855178595c3c077ff2ce71c)
(cherry picked from commit b850ab7cfc8161ba37194f9c7e1935051e3d206f)
(cherry picked from commit 33121ff883e93385eb12dddbed7077e8dcbb968d)
(cherry picked from commit 1fab667892451f21114f87cf48863c0dbdfb9507)
(cherry picked from commit 0708dc8e65603cca2abe7799bffe765f97d00bb4)
(cherry picked from commit 93ad09a7305328387936b68059b63f64efd44f60)
(cherry picked from commit d284b1840048b55b3928465d501e8ed4a6d58097)
(cherry picked from commit 746b326eb0caf9c2227e2a9e7aa3479dffea19ca)
(cherry picked from commit 76b0463a5a4b8b44cb4c82e5906711d18ae439db)

--- a/modules/mbedtls/Kconfig
+++ b/modules/mbedtls/Kconfig
@@ -5,6 +5,7 @@
 
 config ZEPHYR_MBEDTLS_MODULE
 	bool
+
 config MBEDTLS_PROMPTLESS
 	bool
 	help
@@ -12,7 +13,6 @@ config MBEDTLS_PROMPTLESS
 	  This symbol may be used internally in a Kconfig tree to hide the
 	  mbed TLS menu prompt and instead handle the selection of MBEDTLS from
 	  dependent sub-configurations and thus prevent stuck symbol behavior.
-
 
 menuconfig MBEDTLS
 	bool "mbed TLS Support" if !MBEDTLS_PROMPTLESS
@@ -233,3 +233,6 @@ config APP_LINK_WITH_MBEDTLS
 	  issues for 'app'.
 
 endif # MBEDTLS
+
+# Add PSA configurations
+rsource "Kconfig.psa"
