--- a/.github/workflows/doc-build.yml
+++ b/.github/workflows/doc-build.yml
@@ -36,6 +36,9 @@ jobs:
     name: "Documentation Build (HTML)"
     runs-on: ubuntu-latest
     timeout-minutes: 30
+    concurrency:
+      group: doc-build-html-${{ github.ref }}
+      cancel-in-progress: true
 
     steps:
     - name: checkout
@@ -104,6 +107,9 @@ jobs:
     runs-on: ubuntu-latest
     container: texlive/texlive:latest
     timeout-minutes: 30
+    concurrency:
+      group: doc-build-pdf-${{ github.ref }}
+      cancel-in-progress: true
 
     steps:
     - name: checkout
