--- a/drivers/CMakeLists.txt
+++ b/drivers/CMakeLists.txt
@@ -68,3 +68,4 @@ add_subdirectory_ifdef(CONFIG_MBOX             mbox)
 add_subdirectory_ifdef(CONFIG_BOARD_XENVM xen)
 add_subdirectory_ifdef(CONFIG_MM_DRV           mm)
 add_subdirectory_ifdef(CONFIG_RESET          reset)
+add_subdirectory_ifdef(CONFIG_BATTERY          battery)
