--- a/dts/arm/nuvoton/npcx.dtsi
+++ b/dts/arm/nuvoton/npcx.dtsi
@@ -517,7 +517,7 @@
 		};
 
 		kscan0: kscan@400a3000 {
-			compatible = "nuvoton,npcx-kscan";
+			compatible = "nuvoton,npcx-kscan-matrix";
 			reg = <0x400a3000 0x2000>;
 			interrupts = <49 4>;
 			clocks = <&pcc NPCX_CLOCK_BUS_APB1 NPCX_PWDWN_CTL1 0>;
