drivers: Add sensors v2 API
An addition of a new header for the V2 sensors API. The API attempts
to cover the most general use cases for sensors as well as include a
few more advanced yet still common use cases. This API does NOT
attempt to enumerate all of the sensor functionalities. It is believed
that going into too much detail simply makes writing the drivers too
difficult. Instead, applications requiring highly specific uses should
be making direct calls to the sensor via the attached bus.

The purpose of the driver is to abstract away common functionalities
between sensors. If highly specific functionality is required by the
application, then it is likely that a different sensor cannot be used
as a drop-in replacement. It is then assumed that driver API will not
be used by such an application and that the application will make
more direct API calls. These direct calls can still be provided in
Zephyr by the individual driver's header instead of under the common
API.

Fixes #13718

Signed-off-by: Yuval Peress <peress@google.com>

--- a/drivers/sensor/CMakeLists.txt
+++ b/drivers/sensor/CMakeLists.txt
@@ -112,6 +112,12 @@ add_subdirectory_ifdef(CONFIG_TACH_IT8XXX2	ite_tach_it8xxx2)
 add_subdirectory_ifdef(CONFIG_VCMP_IT8XXX2	ite_vcmp_it8xxx2)
 add_subdirectory_ifdef(CONFIG_PCNT_ESP32	pcnt_esp32)
 
+if(CONFIG_SENSOR_VERSION_2 AND CONFIG_SENSOR_STREAMING_MODE)
+  # The above if() is needed otherwise CMake would complain about an empty library
+  zephyr_library_named(sensor_v2)
+  zephyr_library_sources_ifdef(CONFIG_SENSOR_STREAMING_MODE sensor_streaming.c)
+endif()
+
 if(CONFIG_USERSPACE OR CONFIG_SENSOR_SHELL OR CONFIG_SENSOR_SHELL_BATTERY)
 # The above if() is needed or else CMake would complain about
 # empty library.
