--- a/subsys/emul/CMakeLists.txt
+++ b/subsys/emul/CMakeLists.txt
@@ -2,6 +2,8 @@
 
 zephyr_library()
 
+zephyr_include_directories(include)
+
 zephyr_library_sources_ifdef(CONFIG_EMUL		emul.c)
 
 zephyr_include_directories_ifdef(CONFIG_EMUL_BMI160 ${ZEPHYR_BASE}/drivers/sensor/bmi160)
