--- a/tests/drivers/sensor/accel/prj.conf
+++ b/tests/drivers/sensor/accel/prj.conf
@@ -1,2 +1,5 @@
 CONFIG_ZTEST=y
 CONFIG_ZTEST_NEW_API=y
+CONFIG_SENSOR_VERSION_2=y
+CONFIG_SENSOR_STREAMING_MODE=y
+CONFIG_BMI160_TRIGGER_GLOBAL_THREAD=y
