boards: stm32l562e_dk: added st7789h2 support
Added device tree definitions to enable support for
ST7789H2 gpio bitbang display driver and touch controller.

Signed-off-by: Jeremy LOCHE <lochejeremy@gmail.com>

--- a/boards/arm/stm32l562e_dk/stm32l562e_dk.dts
+++ b/boards/arm/stm32l562e_dk/stm32l562e_dk.dts
@@ -19,11 +19,13 @@
 		zephyr,shell-uart = &usart1;
 		zephyr,sram = &sram0;
 		zephyr,flash = &flash0;
+		zephyr,display = &st7789h2;
 	};
 
 	aliases {
 		led0 = &green_led_10;
 		sw0 = &user_button;
+		kscan0 = &touch_controller;
 	};
 };
 
