samples: ipc: openamp_rsc_table: add option to configure mailbox channnel
Some platforms required using a different mailbox channel to notify the
host partner. To also support such platforms as e.g. Linux on i.MX8Mx,
make the ID configurable.

Signed-off-by: Matthias Fend <matthias.fend@emfend.at>

--- a/samples/subsys/ipc/openamp_rsc_table/Kconfig
+++ b/samples/subsys/ipc/openamp_rsc_table/Kconfig
@@ -12,4 +12,8 @@ config OPENAMP_IPC_DEV_NAME
 	help
 	  This option specifies the device name for the IPC device to be used
 
+config OPENAMP_IPC_NOTIFY_CHAN
+	int "Mailbox channel to use to notify the host"
+	default 0
+
 source "Kconfig.zephyr"
