--- a/tests/bluetooth/df/connection_cte_tx_params/prj.conf
+++ b/tests/bluetooth/df/connection_cte_tx_params/prj.conf
@@ -1,5 +1,6 @@
 CONFIG_TEST=y
 CONFIG_ZTEST=y
+CONFIG_ZTEST_NEW_API=y
 
 CONFIG_BT=y
 # It does not matter for the test whether central or peripheral is used.
@@ -15,3 +16,6 @@ CONFIG_BT_CTLR_DF=y
 
 # set antenna switch pattern to max allowed value
 CONFIG_BT_CTLR_DF_MAX_ANT_SW_PATTERN_LEN=39
+
+# this test uses the new LLCP struct
+CONFIG_BT_LL_SW_LLCP=y
