--- a/dts/arm64/intel_socfpga/intel_socfpga_agilex.dtsi
+++ b/dts/arm64/intel_socfpga/intel_socfpga_agilex.dtsi
@@ -44,18 +44,6 @@
 		label = "arch_timer";
 	};
 
-	sysmgr: sysmgr@ffd12000 {
-		compatible = "syscon";
-		reg = <0xffd12000 0x1000>;
-		label = "sysmgr";
-	};
-
-	rstmgr: rstmgr@ffd11000 {
-		compatible = "syscon";
-		reg = <0xffd11000 0x1000>;
-		label = "rstmgr";
-	};
-
 	clock: clock@ffd10000 {
 		compatible = "intel,agilex-clock";
 		reg = <0xffd10000 0x1000>;
@@ -70,10 +58,18 @@
 	 * I2C		<0xffc02800 0x200>
 	 * I2C EMAC	<0xffc02a00 0x300>
 	 * Timer SP	<0xffc03000 0x200>
+	 * GPIO_0	<0xffc03200 0x100>
+	 * GPIO_1	<0xffc03300 0x100>
+	 * Rst Manager	<0xffd11000 0x1000>
+	 * Sys Manager	<0xffd12000 0x1000>
+	 * Pinmux	<0xffd13000 0x1000>
 	 */
 	periph: periph@ffc02000 {
 		compatible = "syscon";
-		reg = <0xffc02000 0x2000>;
+		reg = <0xffc02000 0x2000>,
+		      <0xffd11000 0x1000>,
+		      <0xffd12000 0x1000>,
+		      <0xffd13000 0x1000>;
 		label = "periph";
 	};
 
