drivers: sensor: Add support for VEML7700.
This PR adds support for the VEML7700 ambient light sensor.
It also includes a sample application for how to use the sensor with
the nrf52840dk board.

Signed-off-by: Nikolaus Huber <mail@n-huber.eu>

--- a/tests/drivers/build_all/sensor/prj.conf
+++ b/tests/drivers/build_all/sensor/prj.conf
@@ -100,6 +100,7 @@ CONFIG_TMP108=y
 CONFIG_TMP112=y
 CONFIG_TMP116=y
 CONFIG_VCNL4040=y
+CONFIG_VEML7700=y
 CONFIG_VL53L0X=y
 CONFIG_INA23X=y
 CONFIG_INA230=y
