--- a/tests/drivers/build_all/sensor/i2c.dtsi
+++ b/tests/drivers/build_all/sensor/i2c.dtsi
@@ -637,6 +637,12 @@ test_i2c_vcnl4040: vcnl4040@60 {
 	int-gpios = <&test_gpio 0 0>;
 };
 
+test_i2c_veml7700: veml7700@10 {
+	compatible = "vishay,veml7700";
+	label = "VEML7700";
+	reg = <0x10>;
+};
+
 test_i2c_bmi160: bmi160@4a {
 	compatible = "bosch,bmi160";
 	label = "BMI160";
