samples: hello_world: Modify sample to show log strings stripping
Modified hello_world to use dictionary frontend which does
not touch logging string literals. String literals are placed
in a non-existing memory which can be removed in post build
action.

Post build action is not yet implemented.

This commit is only a temporary showcase.

Signed-off-by: Krzysztof Chruscinski <krzysztof.chruscinski@nordicsemi.no>

--- a/samples/hello_world/prj.conf
+++ b/samples/hello_world/prj.conf
@@ -1,1 +1,10 @@
 # nothing here
+CONFIG_LOG=y
+#CONFIG_PRINTK=n
+CONFIG_LOG_FRONTEND=y
+CONFIG_LOG_FRONTEND_ONLY=y
+CONFIG_LOG_FRONTEND_DICT_UART=y
+CONFIG_LOG2_FMT_SECTION=y
+CONFIG_LOG2_FMT_SECTION_STRIP=y
+CONFIG_LOG_BACKEND_UART=n
+CONFIG_LOG_BACKEND_RTT=n
