dts: bindings: add dma-buffer-memory-region prop to EasyDMA peripherals
This commit introduces new property called dma-buffer-memory-region
for all peripherals with EasyDMA. This allows to specify where
buffers passed to EasyDMA will be placed by linker. Property is not
required. If not specified buffers will be placed in the default RAM
location.

The phandle assigned to the property has to have zephyr,memory-region
compatible with status okay.

It is a developer responsibility to check whether EasyDMA have access
to specified memory region.

Example of use in overlay

/ {
	dma_buffers: memory@2000f000 {
		compatible = "zephyr,memory-region";
		status = "okay";
		zephyr,memory-region = "dma_buffers";
		reg = <0x2000f000 0x1000>;

	};
};

&uart0 {
	dma-buffer-memory-region = <&dma_buffers>;
};

Signed-off-by: Adam Wojasinski <adam.wojasinski@nordicsemi.no>

--- a/dts/bindings/i2c/nordic,nrf-twim.yaml
+++ b/dts/bindings/i2c/nordic,nrf-twim.yaml
@@ -61,3 +61,12 @@ properties:
             It is recommended to use the same value for this property and for
             the zephyr,concat-buf-size one, as both these buffering mechanisms
             can utilize the same space in RAM.
+
+    dma-buffer-memory-region:
+      type: phandle
+      required: false
+      description: /
+        Memory region where EasyDMA buffer will be placed by compiler.
+        It is used by driver to place variables that are passed to EasyDMA in memory region
+        using compiler-specific feature - __attribute__((__section__(<section_name>)))
+        Phandle have to refer to node with zephyr,memory-region compatible.
