tests: spi: spi_loopback: convert to dt spec
Convert the configuration of the spi_loopback test from Kconfig to
devicetree.

Signed-off-by: Jordan Yates <jordan.yates@data61.csiro.au>

--- a/tests/drivers/spi/spi_loopback/CMakeLists.txt
+++ b/tests/drivers/spi/spi_loopback/CMakeLists.txt
@@ -2,6 +2,9 @@
 
 cmake_minimum_required(VERSION 3.20.0)
 
+# Suppress "unique_unit_address_if_enabled" to handle fast and slow loopback overlaps:
+list(APPEND EXTRA_DTC_FLAGS "-Wno-unique_unit_address_if_enabled")
+
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(spi_loopback)
 
