rpi_pico: Fix compiler ID for bootloader
Fixes the compilation for Raspberry Pi Pico on non-Linux
machines, by explicitly setting the compiler ID to the one
used for the rest of the project.

Signed-off-by: Yonatan Schachter <yonatan.schachter@gmail.com>

--- a/modules/hal_rpi_pico/CMakeLists.txt
+++ b/modules/hal_rpi_pico/CMakeLists.txt
@@ -29,6 +29,8 @@ if(CONFIG_HAS_RPI_PICO)
       CMAKE_ARGS
         -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
         -DCMAKE_ASM_COMPILER=${CMAKE_ASM_COMPILER}
+        -DCMAKE_C_COMPILER_ID=${CMAKE_C_COMPILER_ID}
+        -DCMAKE_ASM_COMPILER_ID=${CMAKE_ASM_COMPILER_ID}
         -DZEPHYR_HAL_RPI_PICO_MODULE_DIR=${ZEPHYR_HAL_RPI_PICO_MODULE_DIR}
         -DZEPHYR_BASE=${ZEPHYR_BASE}
         -DFLASH_TYPE=${flash_type}
