requirements: pin west to 0.11.1
Some backward compatibility issues with latest west and building
documentation for this branch. Pin the version to fix doc builds.

Signed-off-by: Anas Nashif <anas.nashif@intel.com>

--- a/scripts/requirements-base.txt
+++ b/scripts/requirements-base.txt
@@ -27,7 +27,7 @@ anytree
 intelhex
 
 # it's west
-west>=0.10.1
+west==0.11.1
 
 # used for windows based 'menuconfig'
 # "win32" is used for 64-bit Windows as well
