Kconfig: Introduce CONFIG_EARLY_INIT
Sometimes the application or the user requires some code to be run as
early as possible during the kernel init stage, immediately after the
stack has been setup (to be able to use C) but before the kernel has
actually started.

Currently Zephyr defines CONFIG_INIT_ARCH_HW_AT_BOOT for all the
architectures and CONFIG_PLATFORM_SPECIFIC_INIT only for ARM that can be
somehow used for that, but both have some limitations.

CONFIG_INIT_ARCH_HW_AT_BOOT has a much more limited scope, and it is
used only to force the initialization of the internal architectural
state and it is usually run before the stack has been setup.

CONFIG_PLATFORM_SPECIFIC_INIT is ARM-specific and it is alredy used by
several SoCs for system and platform initialization, so that is not
available to the user.

This patch wants to introduce a new Kconfig symbol CONFIG_EARLY_INIT
(with CONFIG_ARCH_HAS_EARLY_INIT) that can be used to introduce a
z_early_init() function that is the first function called after the
stack is setup and before the rest of the kernel is started.

Signed-off-by: Carlo Caione <ccaione@baylibre.com>

--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -484,6 +484,13 @@ config INIT_ARCH_HW_AT_BOOT
 	  implementation details refer to each architecture where
 	  this feature is supported.
 
+config EARLY_INIT
+	bool "Call early init function"
+	depends on ARCH_HAS_EARLY_INIT
+	help
+	  The early init function (must be called z_early_init) is the first
+	  function called after the stack is setup and C functions can be used.
+
 endmenu
 
 #
@@ -537,6 +544,9 @@ config ARCH_HAS_COHERENCE
 	  memory using the ".cached" linker section.
 
 config ARCH_HAS_THREAD_LOCAL_STORAGE
+	bool
+
+config ARCH_HAS_EARLY_INIT
 	bool
 
 #
