--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -1111,6 +1111,7 @@ Logging:
         - nordic-krch
     collaborators:
         - chen-png
+        - aasthagr
     files:
         - include/zephyr/logging/
         - samples/subsys/logging/
