--- a/west.yml
+++ b/west.yml
@@ -152,7 +152,7 @@ manifest:
       groups:
         - hal
     - name: libmetal
-      revision: c6efe091dfe02704097586a522969b5a4cc197bd
+      revision: pull/14/head
       path: modules/hal/libmetal
       groups:
         - hal
