dts: bindings: display: sitronix_st7789v: add property to indicate if the display don't have a CS pin
Signed-off-by: Jonathan Gonzaga <jonathan.s.gonzaga@gmail.com>

--- a/dts/bindings/display/sitronix,st7789v.yaml
+++ b/dts/bindings/display/sitronix,st7789v.yaml
@@ -113,3 +113,8 @@ properties:
       type: uint8-array
       required: true
       description: RGB Interface Control Parameter
+
+    inverted-sck:
+      type: boolean
+      required: false
+      description: Only necessary if the display don't have a CS pin
