drivers: sensor: lm75: fixed point var & temp conv
temp variable is fixed-point now.
Also the temperature conversion is now generalized
for all resolutions (9,10,11,12 bit).
A device property was added to configure the temperature
resolution. This is only possible for the Atmel AT30TS75A
right now, as most LM75-standard temperature sensor don't
feature a user-configurable temperature resolution.

Signed-off-by: Loris Schmit <loris.schmit@inovex.de>

--- a/dts/bindings/sensor/lm75.yaml
+++ b/dts/bindings/sensor/lm75.yaml
@@ -6,3 +6,15 @@ description: LM75 Digital Temperature Sensor with 2-Wire Interface.
 compatible: "lm75"
 
 include: i2c-device.yaml
+
+properties:
+    temp-res:
+      type: int
+      required: false
+      default: 9
+      description: |
+        Resolution of the temperature. Size in bits of the temperature 
+        register of the LM75 sensor. 
+        Some sensors use a user-configurable resolution of up to 12 bit.
+        Default: 9
+        Valid range: 9-12
