settings: Replace hard coded SETTINGS_MAX_VAL_LEN with a Kconfig
Firstly, note that SETTINGS_MAX_VAL_LEN is a bit misleading - its
specified size does not get enforced by the settings code at all and
tests with the NVS backend have shown that it is possible to store and
retrieve values exceeding it.

The settings shell however does take SETTINGS_MAX_VAL_LEN into account.
This commit allows the shell to read and print values greater than 256
bytes. Once PR #45459 got merged, the same will be true for writing
values.

This commit also adjusts the NVS and FCB backed setting tests to ensure
increased, non-default values for SETTINGS_MAX_VAL_LEN actually work.

Signed-off-by: Reto Schneider <reto.schneider@husqvarnagroup.com>

--- a/subsys/settings/Kconfig
+++ b/subsys/settings/Kconfig
@@ -133,3 +133,9 @@ config SETTINGS_SHELL
 	  reading the settings requires quite a big stack buffer, so the stack
 	  size of the shell thread may need to be increased to accommodate this
 	  feature.
+
+config SETTINGS_MAX_VAL_LEN
+	int "Max number of bytes per setting item"
+	default 256
+	help
+	  Limit the number of bytes a settings item can contain.
