--- a/tests/subsys/settings/functional/fcb/prj.conf
+++ b/tests/subsys/settings/functional/fcb/prj.conf
@@ -9,3 +9,6 @@ CONFIG_FCB=y
 CONFIG_SETTINGS=y
 CONFIG_SETTINGS_RUNTIME=y
 CONFIG_SETTINGS_FCB=y
+
+# Test limits well above the default limit (256)
+CONFIG_SETTINGS_MAX_VAL_LEN=1024
