--- a/tests/subsys/settings/functional/nvs/prj.conf
+++ b/tests/subsys/settings/functional/nvs/prj.conf
@@ -8,3 +8,6 @@ CONFIG_NVS=y
 CONFIG_SETTINGS=y
 CONFIG_SETTINGS_RUNTIME=y
 CONFIG_SETTINGS_NVS=y
+
+# Test limits well above the default limit (256)
+CONFIG_SETTINGS_MAX_VAL_LEN=1024
