--- a/tests/subsys/settings/functional/nvs/testcase.yaml
+++ b/tests/subsys/settings/functional/nvs/testcase.yaml
@@ -1,6 +1,6 @@
 tests:
   system.settings.functional.nvs:
-    platform_allow: qemu_x86 native_posix native_posix_64
+    platform_allow: qemu_x86 native_posix native_posix_64 lpcxpresso55s69_cpu0
     tags: settings_nvs
   system.settings.functional.nvs.chosen:
     extra_args: DTC_OVERLAY_FILE=./chosen.overlay
