--- a/tests/net/socket/af_packet/prj.conf
+++ b/tests/net/socket/af_packet/prj.conf
@@ -7,6 +7,7 @@ CONFIG_NET_TCP=n
 CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
 CONFIG_NET_SOCKETS_PACKET=y
+CONFIG_NET_SOCKETS_PACKET_DGRAM=y
 CONFIG_POSIX_MAX_FDS=8
 CONFIG_NET_IPV6_DAD=n
 CONFIG_NET_IPV6_MLD=n
