--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -1669,6 +1669,7 @@ Renesas R-Car Platforms:
     files:
         - boards/arm/rcar_*/
         - drivers/*/*rcar*
+        - drivers/clock_control/*cpg_mssr*
         - dts/arm/renesas/
         - dts/bindings/*/*rcar*
         - soc/arm/renesas_rcar/
