--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -1632,7 +1632,7 @@ NXP Platforms:
   labels:
     - "platform: NXP"
 
-Microchip Platforms:
+Microchip MEC Platforms:
   status: maintained
   maintainers:
     - jvasanth1
@@ -1645,7 +1645,7 @@ Microchip Platforms:
     - soc/arm/microchip_mec/
     - drivers/*/*mchp*.c
   labels:
-    - "platform: Microchip"
+    - "platform: Microchip MEC"
 
 nRF Platforms:
     status: maintained
