--- a/boards/arm/stm32l562e_dk/stm32l562e_dk_common.dtsi
+++ b/boards/arm/stm32l562e_dk/stm32l562e_dk_common.dtsi
@@ -7,6 +7,7 @@
 #include <st/l5/stm32l562Xe.dtsi>
 #include <st/l5/stm32l562qeixq-pinctrl.dtsi>
 #include "arduino_r3_connector.dtsi"
+#include <dt-bindings/memory-controller/stm32-fmc-nor-psram.h>
 
 / {
 	leds {
@@ -48,6 +49,16 @@
 			substate-id = <3>;
 			min-residency-us = <900>;
 		};
+	};
+
+	/* Voltage regulator needs to be enabled for LCD/Touch usage */
+	vdd_lcd_reg: vdd_lcd_reg {
+		compatible = "regulator-fixed-sync", "regulator-fixed";
+		label = "vdd_lcd_reg";
+		regulator-name = "vdd_lcd_reg";
+		enable-gpios = <&gpioh 0 GPIO_ACTIVE_LOW>;
+		status = "okay";
+		regulator-boot-on;
 	};
 };
 
@@ -104,6 +115,14 @@
 		reg = <0x6a>;
 		irq-gpios = <&gpiof 3 GPIO_ACTIVE_HIGH>;
 		label = "LSM6DSO";
+	};
+
+	/* Display touch panel controller FT6236 is compatible with FT5336*/
+	touch_controller: ft5336@38 {
+		compatible = "focaltech,ft5336";
+		reg = <0x38>;
+		label = "FT5336";
+		int-gpios = <&gpiof 1 GPIO_ACTIVE_LOW>;
 	};
 };
 
@@ -195,6 +214,88 @@
 	pinctrl-names = "default";
 	cs-gpios = <&gpioe 0 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
 	status = "okay";
+};
+
+&fmc {
+	status = "okay";
+	/* ST7789H2 FMC pinout based on UM2614 */
+	pinctrl-0 = <&fmc_nce_pd7 &fmc_nwe_pd5 &fmc_noe_pd4
+		     &fmc_a0_pf0 &fmc_d0_pd14 &fmc_d1_pd15
+		     &fmc_d2_pd0 &fmc_d3_pd1 &fmc_d4_pe7 &fmc_d5_pe8 &fmc_d6_pe9
+		     &fmc_d7_pe10 &fmc_d8_pe11 &fmc_d9_pe12 &fmc_d10_pe13
+		     &fmc_d11_pe14 &fmc_d12_pe15 &fmc_d13_pd8 &fmc_d14_pd9
+		     &fmc_d15_pd10>;
+	pinctrl-names = "default";
+
+	/* ST7789H2 FMC SRAM interface*/
+	lcd_fmc_sram: sram {
+		compatible = "st,stm32-fmc-nor-psram";
+		#address-cells = <1>;
+		#size-cells = <0>;
+		label = "STM32_FMC_NOR_PSRAM";
+		status = "okay";
+
+		lcd_data_bus: sram@0 {
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			reg = <0>;
+
+			st,control = <STM32_FMC_DATA_ADDRESS_MUX_DISABLE
+					   STM32_FMC_MEMORY_TYPE_SRAM
+					   STM32_FMC_NORSRAM_MEM_BUS_WIDTH_16
+					   STM32_FMC_BURST_ACCESS_MODE_DISABLE
+					   STM32_FMC_WAIT_SIGNAL_POLARITY_LOW
+					   STM32_FMC_WAIT_TIMING_BEFORE_WS
+					   STM32_FMC_WRITE_OPERATION_ENABLE
+					   STM32_FMC_WAIT_SIGNAL_DISABLE
+					   STM32_FMC_EXTENDED_MODE_DISABLE
+					   STM32_FMC_ASYNCHRONOUS_WAIT_DISABLE
+					   STM32_FMC_WRITE_BURST_DISABLE
+					   STM32_FMC_CONTINUOUS_CLOCK_SYNC_ONLY
+					   STM32_FMC_WRITE_FIFO_DISABLE
+					   STM32_FMC_PAGE_SIZE_NONE>;
+
+			st,timing = <1 1 32 0 2 2 STM32_FMC_ACCESS_MODE_A>;
+			st,timing-ext = <5 1 3 2 STM32_FMC_ACCESS_MODE_A>;
+		};
+	};
+};
+
+&lcd_data_bus {
+	st7789h2: st7789h2@0 {
+		/* CMD reg */
+		/* DATA reg */
+		reg = <0x60000000
+		       0x60000002>;
+
+		compatible = "sitronix,st7789h2-st-fmc";
+		label = "DISPLAY";
+		status = "okay";
+
+		backlight-gpio = <&gpioe 1 GPIO_ACTIVE_HIGH>;
+		reset-gpio = <&gpiof 14 GPIO_ACTIVE_LOW>;
+		te-gpio = <&gpioa 8 GPIO_ACTIVE_HIGH>;
+		height = <240>;
+		width = <240>;
+		x-offset = <0>;
+		y-offset = <0>;
+		vcom = <0x1f>;
+		gctrl = <0x35>;
+		vrhs = <0x12>;
+		vdvs = <0x20>;
+		mdac = <0>;
+		lcm = <0x2c>;
+		colmod = <0x55>;
+		gamma = <0x1>;
+		porch-param = [0C 0C 00 33 33];
+		cmd2en-param = [5a 69 02 01];
+		pwctrl1-param = [a4 a1];
+		pvgam-param = [D0 08 11 08 0C 15 39 33 50 36 13 14 29 2D];
+		nvgam-param = [D0 07 10 08 06 06 39 44 51 0B 16 14 2F 31];
+		ram-param = [00 F0];
+		rgb-param = [CD 08 14];
+	};
 };
 
 zephyr_udc0: &usb {
