net: lib: websocket: call socket poll for websocket
If we couldn't send all (or any data) via the socket,
invoke poll instead of blindly retrying and flooding the socket.

Signed-off-by: Andrey Dodonov <Andrey.Dodonov@endress.com>

--- a/subsys/net/lib/websocket/Kconfig
+++ b/subsys/net/lib/websocket/Kconfig
@@ -21,6 +21,10 @@ config WEBSOCKET_MAX_CONTEXTS
 	help
 	  How many Websockets can be created in the system.
 
+config WS_CLIENT_SOCKET_POLL_TIMEOUT_MS
+	int "Timeout in milliseconds for polling socket when sending data"
+	default 2000
+
 module = NET_WEBSOCKET
 module-dep = NET_LOG
 module-str = Log level for Websocket
