--- a/drivers/sensor/opt3001/Kconfig
+++ b/drivers/sensor/opt3001/Kconfig
@@ -3,10 +3,55 @@
 # Copyright (c) 2019 Actinius
 # SPDX-License-Identifier: Apache-2.0
 
-config OPT3001
+menuconfig OPT3001
 	bool "OPT3001 Light Sensor"
 	default y
 	depends on DT_HAS_TI_OPT3001_ENABLED
 	select I2C
 	help
 	  Enable driver for OPT3001 light sensors.
+
+if OPT3001
+
+choice OPT3001_TRIGGER_MODE
+	prompt "Trigger mode"
+	help
+	  Specify the type of triggering to be used by the driver.
+
+config OPT3001_TRIGGER_NONE
+	bool "No trigger"
+
+config OPT3001_TRIGGER_GLOBAL_THREAD
+	bool "Use global thread"
+	depends on GPIO
+	select OPT3001_TRIGGER
+
+config OPT3001_TRIGGER_OWN_THREAD
+	bool "Use own thread"
+	depends on GPIO
+	select OPT3001_TRIGGER
+
+endchoice
+
+config OPT3001_TRIGGER
+	bool
+
+if OPT3001_TRIGGER
+
+config OPT3001_THREAD_PRIORITY
+	int "Thread priority"
+	depends on OPT3001_TRIGGER_OWN_THREAD
+	default 10
+	help
+	  Priority of thread used by the driver to handle interrupts.
+
+config OPT3001_THREAD_STACK_SIZE
+	int "Thread stack size"
+	depends on OPT3001_TRIGGER_OWN_THREAD
+	default 1024
+	help
+	  Stack size of thread used by the driver to handle interrupts.
+
+endif # OPT3001_TRIGGER
+
+endif # OPT3001
