--- a/dts/bindings/sensor/ti,opt3001.yaml
+++ b/dts/bindings/sensor/ti,opt3001.yaml
@@ -6,3 +6,9 @@ description: Texas Instruments OPT3001 ambient light sensor
 compatible: "ti,opt3001"
 
 include: [sensor-device.yaml, i2c-device.yaml]
+
+properties:
+    irq-gpios:
+      # This signal is active high when produced by the sensor
+      type: phandle-array
+      required: false
