DO NOT REVIEW - SQUASHED PATCHES FROM #51924
No seriously, don't review this.  Look at the same content in #51924

--- a/samples/subsys/portability/cmsis_rtos_v2/philosophers/prj.conf
+++ b/samples/subsys/portability/cmsis_rtos_v2/philosophers/prj.conf
@@ -12,3 +12,4 @@ CONFIG_SCHED_SCALABLE=y
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=1000
 CONFIG_CMSIS_V2_THREAD_MAX_STACK_SIZE=2048
 CONFIG_CMSIS_V2_THREAD_DYNAMIC_STACK_SIZE=2048
+CONFIG_SMP=n
