sensor: tdk 42688 driver
Adds a driver for both the sensor v1 and sensor v2 APIs for the
TDK InvenSense 42688 six axis IMU.

Notably this sensor is meant to excercise to a high degree the new
API and show where some things may be under defined or missing
in the new API.

Signed-off-by: Tom Burdick <thomas.burdick@intel.com>

--- a/boards/arm/tdk_robokit1/tdk_robokit1-common.dtsi
+++ b/boards/arm/tdk_robokit1/tdk_robokit1-common.dtsi
@@ -81,6 +81,17 @@
 &spi0 {
 	pinctrl-0 = <&spi0_default>;
 	pinctrl-names = "default";
+	cs-gpios =<&pioa 31 GPIO_ACTIVE_LOW>;
+
+	icm42688p@0 {
+		compatible = "invensense,icm42688";
+		reg = <0>;
+		spi-max-frequency = <24000000>;
+		accel-hz = <32000>;
+		accel-fs = <16>;
+		gyro-hz = <32000>;
+		gyro-fs = <2000>;
+	};
 
 	status = "okay";
 };
