--- a/drivers/sensor/Kconfig
+++ b/drivers/sensor/Kconfig
@@ -110,6 +110,8 @@ source "drivers/sensor/icm42605/Kconfig"
 
 source "drivers/sensor/icm42670/Kconfig"
 
+source "drivers/sensor/icm42688/Kconfig"
+
 source "drivers/sensor/iis2dh/Kconfig"
 
 source "drivers/sensor/iis2dlpc/Kconfig"
