--- a/samples/sensor/sensor_shell/prj.conf
+++ b/samples/sensor/sensor_shell/prj.conf
@@ -1,4 +1,6 @@
 CONFIG_SHELL=y
-CONFIG_BOOT_BANNER=n
+CONFIG_LOG=y
+CONFIG_BOOT_BANNER=y
 CONFIG_SENSOR=y
 CONFIG_SENSOR_SHELL=y
+CONFIG_SENSOR_LOG_LEVEL_DBG=y
