--- a/drivers/sensor/Kconfig
+++ b/drivers/sensor/Kconfig
@@ -111,6 +111,8 @@ source "drivers/sensor/icm42605/Kconfig"
 
 source "drivers/sensor/icm42670/Kconfig"
 
+source "drivers/sensor/icp10125/Kconfig"
+
 source "drivers/sensor/iis2dh/Kconfig"
 
 source "drivers/sensor/iis2dlpc/Kconfig"
