--- a/boards/riscv/icev_wireless/icev_wireless.dts
+++ b/boards/riscv/icev_wireless/icev_wireless.dts
@@ -25,6 +25,7 @@
 		i2c-0 = &i2c0;
 		sw0 = &user_button1;
 		watchdog0 = &wdt0;
+		fpga0 = &fpga0;
 	};
 
 	leds {
@@ -75,6 +76,22 @@
 	#size-cells = <0>;
 	pinctrl-0 = <&spim2_default>;
 	pinctrl-names = "default";
+
+	cs-gpios = <&gpio0 6 (GPIO_PULL_UP | GPIO_OPEN_DRAIN | GPIO_ACTIVE_LOW)>;
+
+	fpga0: fpga@0 {
+		status = "okay";
+		compatible = "lattice,ice40-fpga";
+
+		reg = <0>;
+		spi-max-frequency = <1000000>;
+
+		cdone-gpios = <&gpio0 0 0>;
+		creset-gpios = <&gpio0 1 GPIO_OPEN_DRAIN>;
+		creset-delay-ns = <200>;
+		config-delay-us = <2000>;
+		additional-clocks = <160>;
+	};
 };
 
 &gpio0 {
