cmock: Add cmock and unity support
This adds cmock and unity support.

Fixes #30391

Signed-off-by: Martin Schröder <mkschreder.uk@gmail.com>
Signed-off-by: Martin Schröder <info@swedishembedded.com>

--- a/subsys/testsuite/CMakeLists.txt
+++ b/subsys/testsuite/CMakeLists.txt
@@ -1,6 +1,8 @@
 # SPDX-License-Identifier: Apache-2.0
 
 add_subdirectory_ifdef(CONFIG_ZTEST ztest)
+add_subdirectory_ifdef(CONFIG_UNITY unity)
+add_subdirectory_ifdef(CONFIG_CMOCK cmock)
 
 if(CONFIG_TEST)
   zephyr_include_directories(${ZEPHYR_BASE}/subsys/testsuite/include)
