boards: mimxrt685_evk_cm33: Remove FLASH_SIZE setting
Remove FLASH_SIZE setting, as this is now set from the SOC level via the
flash chosen node. Also, correct the flash controller node to the flash
device that implements flash support

Signed-off-by: Daniel DeGrasse <daniel.degrasse@nxp.com>

--- a/boards/arm/mimxrt685_evk/mimxrt685_evk_cm33.dts
+++ b/boards/arm/mimxrt685_evk/mimxrt685_evk_cm33.dts
@@ -36,7 +36,7 @@
 	};
 
 	chosen {
-		zephyr,flash-controller = &flexspi;
+		zephyr,flash-controller = &mx25um51345g;
 		zephyr,flash = &mx25um51345g;
 		zephyr,code-partition = &slot0_partition;
 		zephyr,sram = &sram0;
