dts: arm: nxp: Enable css on lpc55s36
Add css to lpc55s36 device tree

Signed-off-by: Declan Snyder <declan.snyder@nxp.com>

--- a/dts/arm/nxp/nxp_lpc55S3x_common.dtsi
+++ b/dts/arm/nxp/nxp_lpc55S3x_common.dtsi
@@ -11,6 +11,10 @@
 #include <mem.h>
 
 / {
+	chosen {
+		zephyr,entropy = &css;
+	};
+
 	cpus {
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -223,6 +227,12 @@
 		status = "disabled";
 		#address-cells = <1>;
 		#size-cells = <0>;
+	};
+
+	css: css@4003000 {
+		compatible = "nxp,css-v2";
+		reg = <0x4003000 0x200>;
+		status = "okay";
 	};
 
 	can0: can@4009d000 {
