arch: arm: Support using external cache
In arm_mpu.c, use generic cache syscall

Enable generic cache API for cortex M

Redirect syscall to different implementation depending on
whether the cache is external or on-chip cache

Signed-off-by: Declan Snyder <declan.snyder@nxp.com>

--- a/arch/arm/core/aarch32/Kconfig
+++ b/arch/arm/core/aarch32/Kconfig
@@ -23,6 +23,7 @@ config CPU_CORTEX_M
 	select ARCH_SUPPORTS_ARCH_HW_INIT
 	select ARCH_HAS_SUSPEND_TO_RAM
 	select ARCH_HAS_CODE_DATA_RELOCATION
+	imply CACHE_MANAGEMENT
 	imply XIP
 	help
 	  This option signifies the use of a CPU of the Cortex-M family.
