drivers: cache: Add kinetis cache driver
Some NXP parts use a custom cache derived from kinetis family,
add a driver for this under the generic cache API

Signed-off-by: Declan Snyder <declan.snyder@nxp.com>

--- a/west.yml
+++ b/west.yml
@@ -88,7 +88,7 @@ manifest:
       groups:
         - hal
     - name: hal_nxp
-      revision: 9bc1e797921b2a4b246ce7647dc426549985e76a
+      revision: pull/194/head
       path: modules/hal/nxp
       groups:
         - hal
