Bluetooth: controller: implementing SCA update procedure PDU flow
Adding PDU flow and unittest for Sleep clock accuracy procedure

Signed-off-by: Erik Brockhoff <erbr@oticon.com>

wip kconf

--- a/subsys/bluetooth/controller/Kconfig
+++ b/subsys/bluetooth/controller/Kconfig
@@ -78,6 +78,9 @@ config BT_CTLR_MIN_USED_CHAN_SUPPORT
 config BT_CTLR_SMI_SUPPORT
 	bool
 
+config BT_CTLR_SCA_UPDATE_SUPPORT
+	bool
+
 config BT_CTLR_CONN_RSSI_SUPPORT
 	bool
 
@@ -449,6 +452,14 @@ config BT_CTLR_MIN_USED_CHAN
 	help
 	  Enable support for Bluetooth 5.0 Minimum Number of Used Channels
 	  Procedure in the Controller.
+
+config BT_CTLR_SCA_UPDATE
+	bool "Sleep Clock Accuracy Update procedure"
+	depends on BT_SCA_UPDATE && BT_CTLR_SCA_UPDATE_SUPPORT
+	default y if BT_CTLR_CONN_ISO
+	help
+	  Enable support for Bluetooth 5.1 Sleep Clock Accuracy
+	  Update procedure in the Controller.
 
 config BT_CTLR_CONN_RSSI
 	bool "Connection RSSI"
