--- a/subsys/CMakeLists.txt
+++ b/subsys/CMakeLists.txt
@@ -19,6 +19,7 @@ add_subdirectory(random)
 add_subdirectory(storage)
 add_subdirectory_ifdef(CONFIG_SETTINGS             settings)
 add_subdirectory(fb)
+add_subdirectory(dsp)
 add_subdirectory(portability)
 add_subdirectory(pm)
 add_subdirectory(stats)
