math: Introduce a DSP basicmath subsystem with a cmsis backend
Introduce an API mirroring the CMSIS-DSP's basicmath. If CMSIS_DSP is
enabled, then it will by default be used as a backend. Developers may
opt into a custom backend by setting CONFIG_DSP_BACKEND_CMSIS=n. If
done, the application must provide `zdsp_backend/dsp.h` and optionally
implement the functions in its own .c files.

Signed-off-by: Yuval Peress <peress@google.com>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -321,6 +321,16 @@ CMSIS API layer:
     - "area: CMSIS API Layer"
     - "area: Portability"
 
+DSP subsystem:
+  status: maintained
+  maintainers:
+    - yperess
+  files:
+    - subsys/dsp/
+    - tests/subsys/dsp/
+  labels:
+    - "area: DSP"
+
 CMSIS-DSP integration:
   status: maintained
   maintainers:
@@ -331,7 +341,6 @@ CMSIS-DSP integration:
     - modules/Kconfig.cmsis_dsp
     - tests/benchmarks/cmsis_dsp/
     - tests/lib/cmsis_dsp/
-    - tests/subsys/dsp/
   labels:
     - "area: CMSIS-DSP"
 
