--- a/tests/bluetooth/shell/testcase.yaml
+++ b/tests/bluetooth/shell/testcase.yaml
@@ -46,7 +46,7 @@ tests:
     build_only: true
     platform_allow: native_posix
     extra_configs:
-      - CONFIG_BT_VCS=n
+      - CONFIG_BT_VCP=n
     tags: bluetooth
   bluetooth.shell.audio.no_vocs:
     extra_args: CONF_FILE="audio.conf"
@@ -54,7 +54,7 @@ tests:
     platform_allow: native_posix
     extra_configs:
       - CONFIG_BT_VOCS_MAX_INSTANCE_COUNT=0
-      - CONFIG_BT_VCS_VOCS_INSTANCE_COUNT=0
+      - CONFIG_BT_VCP_VOCS_INSTANCE_COUNT=0
     tags: bluetooth
   bluetooth.shell.audio.no_aics:
     extra_args: CONF_FILE="audio.conf"
@@ -62,7 +62,7 @@ tests:
     platform_allow: native_posix
     extra_configs:
       - CONFIG_BT_AICS_MAX_INSTANCE_COUNT=0
-      - CONFIG_BT_VCS_AICS_INSTANCE_COUNT=0
+      - CONFIG_BT_VCP_AICS_INSTANCE_COUNT=0
       - CONFIG_BT_MICP_MIC_DEV_AICS_INSTANCE_COUNT=0
     tags: bluetooth
   bluetooth.shell.audio.no_aics_vocs:
@@ -71,39 +71,39 @@ tests:
     platform_allow: native_posix
     extra_configs:
       - CONFIG_BT_VOCS_MAX_INSTANCE_COUNT=0
-      - CONFIG_BT_VCS_VOCS_INSTANCE_COUNT=0
+      - CONFIG_BT_VCP_VOCS_INSTANCE_COUNT=0
       - CONFIG_BT_AICS_MAX_INSTANCE_COUNT=0
-      - CONFIG_BT_VCS_AICS_INSTANCE_COUNT=0
+      - CONFIG_BT_VCP_AICS_INSTANCE_COUNT=0
       - CONFIG_BT_MICP_MIC_DEV_AICS_INSTANCE_COUNT=0
     tags: bluetooth
-  bluetooth.shell.audio.no_vcs_client:
+  bluetooth.shell.audio.no_vcp_client:
     extra_args: CONF_FILE="audio.conf"
     build_only: true
     platform_allow: native_posix
     extra_configs:
-      - CONFIG_BT_VCS_CLIENT=n
+      - CONFIG_BT_VCP_CLIENT=n
     tags: bluetooth
-  bluetooth.shell.audio.no_vcs_vcs_client:
+  bluetooth.shell.audio.no_vcs_vcp_client:
     extra_args: CONF_FILE="audio.conf"
     build_only: true
     platform_allow: native_posix
     extra_configs:
-      - CONFIG_BT_VCS=n
-      - CONFIG_BT_VCS_CLIENT=n
+      - CONFIG_BT_VCP=n
+      - CONFIG_BT_VCP_CLIENT=n
     tags: bluetooth
-  bluetooth.shell.audio.vcs_client_no_aics_client:
+  bluetooth.shell.audio.vcp_client_no_aics_client:
     extra_args: CONF_FILE="audio.conf"
     build_only: true
     platform_allow: native_posix
     extra_configs:
-      - CONFIG_BT_VCS_CLIENT_MAX_AICS_INST=0
+      - CONFIG_BT_VCP_CLIENT_MAX_AICS_INST=0
     tags: bluetooth
-  bluetooth.shell.audio.vcs_client_no_vocs_client:
+  bluetooth.shell.audio.vcp_client_no_vocs_client:
     extra_args: CONF_FILE="audio.conf"
     build_only: true
     platform_allow: native_posix
     extra_configs:
-      - CONFIG_BT_VCS_CLIENT_MAX_VOCS_INST=0
+      - CONFIG_BT_VCP_CLIENT_MAX_VOCS_INST=0
     tags: bluetooth
   bluetooth.shell.audio.no_micp_mic_dev:
     extra_args: CONF_FILE="audio.conf"
