--- a/tests/bluetooth/shell/audio.conf
+++ b/tests/bluetooth/shell/audio.conf
@@ -70,12 +70,12 @@ CONFIG_BT_VOCS_CLIENT_MAX_INSTANCE_COUNT=1
 CONFIG_BT_AICS_MAX_INSTANCE_COUNT=2
 CONFIG_BT_AICS_CLIENT_MAX_INSTANCE_COUNT=2
 
-CONFIG_BT_VCS=y
-CONFIG_BT_VCS_VOCS_INSTANCE_COUNT=1
-CONFIG_BT_VCS_AICS_INSTANCE_COUNT=1
-CONFIG_BT_VCS_CLIENT=y
-CONFIG_BT_VCS_CLIENT_MAX_VOCS_INST=1
-CONFIG_BT_VCS_CLIENT_MAX_AICS_INST=1
+CONFIG_BT_VCP=y
+CONFIG_BT_VCP_VOCS_INSTANCE_COUNT=1
+CONFIG_BT_VCP_AICS_INSTANCE_COUNT=1
+CONFIG_BT_VCP_CLIENT=y
+CONFIG_BT_VCP_CLIENT_MAX_VOCS_INST=1
+CONFIG_BT_VCP_CLIENT_MAX_AICS_INST=1
 
 CONFIG_BT_MICP_MIC_DEV=y
 CONFIG_BT_MICP_MIC_DEV_AICS_INSTANCE_COUNT=1
@@ -153,8 +153,8 @@ CONFIG_BT_AUDIO_BROADCAST_SINK_LOG_LEVEL_DBG=y
 CONFIG_BT_HAS_LOG_LEVEL_DBG=y
 CONFIG_BT_HAS_CLIENT_LOG_LEVEL_DBG=y
 CONFIG_BT_TBS_LOG_LEVEL_DBG=y
-CONFIG_BT_VCS_CLIENT_LOG_LEVEL_DBG=y
-CONFIG_BT_VCS_LOG_LEVEL_DBG=y
+CONFIG_BT_VCP_CLIENT_LOG_LEVEL_DBG=y
+CONFIG_BT_VCP_LOG_LEVEL_DBG=y
 CONFIG_BT_MICP_MIC_CTLR_LOG_LEVEL_DBG=y
 CONFIG_BT_MICP_MIC_DEV_LOG_LEVEL_DBG=y
 CONFIG_BT_AICS_CLIENT_LOG_LEVEL_DBG=y
