Bluetooth: Audio: Add separate API for VCP vol controller
Add a separate API for the VCP volume controller (client).

Signed-off-by: Emil Gydesen <emil.gydesen@nordicsemi.no>

--- a/subsys/bluetooth/shell/CMakeLists.txt
+++ b/subsys/bluetooth/shell/CMakeLists.txt
@@ -30,8 +30,8 @@ zephyr_library_sources_ifdef(
   vcp.c
   )
 zephyr_library_sources_ifdef(
-  CONFIG_BT_VCP_CLIENT
-  vcp_client.c
+  CONFIG_BT_VCP_VOL_CTLR
+  vcp_vol_ctlr.c
   )
 zephyr_library_sources_ifdef(
   CONFIG_BT_MICP_MIC_DEV
