--- a/subsys/bluetooth/audio/CMakeLists.txt
+++ b/subsys/bluetooth/audio/CMakeLists.txt
@@ -16,10 +16,8 @@ if (CONFIG_BT_AICS OR CONFIG_BT_AICS_CLIENT)
 endif()
 zephyr_library_sources_ifdef(CONFIG_BT_AICS_CLIENT aics_client.c)
 
-if (CONFIG_BT_VCP OR CONFIG_BT_VCP_CLIENT)
-	zephyr_library_sources(vcp.c)
-endif()
-zephyr_library_sources_ifdef(CONFIG_BT_VCP_CLIENT vcp_client.c)
+zephyr_library_sources_ifdef(CONFIG_BT_VCP vcp.c)
+zephyr_library_sources_ifdef(CONFIG_BT_VCP_VOL_CTLR vcp_vol_ctlr.c)
 
 if (CONFIG_BT_MICP_MIC_DEV)
 	zephyr_library_sources(micp_mic_dev.c)
