--- a/tests/bluetooth/shell/testcase.yaml
+++ b/tests/bluetooth/shell/testcase.yaml
@@ -76,34 +76,34 @@ tests:
       - CONFIG_BT_VCP_AICS_INSTANCE_COUNT=0
       - CONFIG_BT_MICP_MIC_DEV_AICS_INSTANCE_COUNT=0
     tags: bluetooth
-  bluetooth.shell.audio.no_vcp_client:
+  bluetooth.shell.audio.no_vcp_vol_ctlr:
     extra_args: CONF_FILE="audio.conf"
     build_only: true
     platform_allow: native_posix
     extra_configs:
-      - CONFIG_BT_VCP_CLIENT=n
+      - CONFIG_BT_VCP_VOL_CTLR=n
     tags: bluetooth
-  bluetooth.shell.audio.no_vcs_vcp_client:
+  bluetooth.shell.audio.no_vcs_vcp_vol_ctlr:
     extra_args: CONF_FILE="audio.conf"
     build_only: true
     platform_allow: native_posix
     extra_configs:
       - CONFIG_BT_VCP=n
-      - CONFIG_BT_VCP_CLIENT=n
+      - CONFIG_BT_VCP_VOL_CTLR=n
     tags: bluetooth
-  bluetooth.shell.audio.vcp_client_no_aics_client:
+  bluetooth.shell.audio.vcp_vol_ctlr_no_aics_client:
     extra_args: CONF_FILE="audio.conf"
     build_only: true
     platform_allow: native_posix
     extra_configs:
-      - CONFIG_BT_VCP_CLIENT_MAX_AICS_INST=0
+      - CONFIG_BT_VCP_VOL_CTLR_MAX_AICS_INST=0
     tags: bluetooth
-  bluetooth.shell.audio.vcp_client_no_vocs_client:
+  bluetooth.shell.audio.vcp_vol_ctlr_no_vocs_client:
     extra_args: CONF_FILE="audio.conf"
     build_only: true
     platform_allow: native_posix
     extra_configs:
-      - CONFIG_BT_VCP_CLIENT_MAX_VOCS_INST=0
+      - CONFIG_BT_VCP_VOL_CTLR_MAX_VOCS_INST=0
     tags: bluetooth
   bluetooth.shell.audio.no_micp_mic_dev:
     extra_args: CONF_FILE="audio.conf"
