Bluetooth: Audio: Rename CSIS to CSIP
Renamed the coordinated set implementation to use the
profile (CSIP) name instead of the service (CSIS) name, as
the former is more general.

Signed-off-by: Emil Gydesen <emil.gydesen@nordicsemi.no>

--- a/subsys/bluetooth/audio/Kconfig
+++ b/subsys/bluetooth/audio/Kconfig
@@ -30,7 +30,7 @@ rsource "Kconfig.vocs"
 rsource "Kconfig.aics"
 rsource "Kconfig.vcs"
 rsource "Kconfig.micp"
-rsource "Kconfig.csis"
+rsource "Kconfig.csip"
 rsource "Kconfig.tbs"
 rsource "Kconfig.mcs"
 rsource "Kconfig.bass"
